# coth

./: .gitignore  README.md  WARNING.md  platformio.ini  prj.conf
.github/workflows/: test.yml
boards/: mellon.json  mellon.overlay
docs/: attacks.md  ble_protocol.md  deviations.md  flashing.md  quickstart.md
mobile/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
mobile/crates/mellon-proto/: Cargo.toml
mobile/src/: App.tsx  ErrorBoundary.tsx  app.css  ble.ts  session.ts  types.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: commands.rs  lib.rs  main.rs
mobile/src/screens/: AsyncScreen.tsx  ConnectScreen.tsx  ConsoleScreen.tsx  DumpScreen.tsx  ModeScreen.tsx  StatusScreen.tsx
src/: main.c  mode.c  mode.h
src/attacks/: keyset.c  keyset.h  keyset_match.c  keyset_match.h  sniff.c  sniff.h  weakkeys.c  weakkeys.h  weakkeys_keys.c  weakkeys_keys.h  weakkeys_score.c  weakkeys_score.h
src/ble/: nus_console.c  nus_console.h
src/board/: board.c  board.h  rs485.c  rs485.h  rs485_fsm.c  rs485_fsm.h
src/osdp/: framing.c  framing.h  libosdp_glue.c  libosdp_glue.h  secchan.c  secchan.h
src/storage/: capture.c  capture.h  capture_rec.c  capture_rec.h  nvs_config.c  nvs_config.h
src/util/: log.c  log.h  timing.c  timing.h
tests/hil/: loopback.md
tests/unit/: test_capture.c  test_crc16.c  test_framing.c  test_keyset.c  test_rs485_loopback.c  test_weakkeys.c
tools/: ble_console.py  parse_capture.py
(+23 files in other folders)
